# swc-plugin-legacy

./: .gitignore  .prettierrc  .swcrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  vite.config.ts
.cargo/: config.toml
.github/workflows/: publish.yml
demo/: .swcrc  index.html
demo/src/: factory.ts  index.ts
src/: analyzer.rs  config.rs  effector.rs  lib.rs  macros.rs  path.rs  sid.rs
tests/: fixture.rs  main.test.js
tests/fixtures/domain/: code.js  output.js
tests/fixtures/event-sid/: code.js  config.json  output.js
tests/fixtures/factories/: code.js  config.json  output.js
tests/fixtures/loc/: code.js  output.js
tests/fixtures/react/: code.js  config.json  output.js
tests/fixtures/restores/: code.js  output.js
tests/fixtures/sample/: code.js  output.js
tests/fixtures/scope/: code.js  config.json  output.js
tests/fixtures/store-sid/: code.js  config.json  output.js
