[package]
name = "effector-swc-plugin"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
radix_fmt = "1.0.0"
ahash = { version = "0.8.2", features = ["serde"] }
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
swc_common = { version = "0.29.25", features = ["concurrent"] }
swc_core = { version = "0.51.0", features = [
    "ecma_plugin_transform",
    "ecma_utils",
    "ecma_visit",
    "ecma_ast",
    "common",
    "ecma_quote",
    "testing_transform"
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dev-dependencies]
swc_ecmascript = { version = "0.206.29", features = ["parser", "transforms"] }
testing = "0.31.27"
